# rp2040_experiments-multicore_multiprogram

./: README.md
core0-flash_core1-flash/: Cargo.toml  memory.x  run.sh
core0-flash_core1-flash/src/: main.rs
core0-flash_core1-ram/: Cargo.toml  memory.x  run.sh
core0-flash_core1-ram/.cargo/: config.toml
core0-flash_core1-ram/src/: main.rs
core1-blinky-flash/: Cargo.toml  build.sh  memory.x
core1-blinky-flash/.cargo/: config.toml
core1-blinky-flash/src/: main.rs
core1-blinky-ram/: Cargo.toml  build.sh  memory.x
core1-blinky-ram/src/: main.rs
